--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,30 @@
-{% include header.html %}
+<!doctype html>
+<html class="no-js" lang="">
+<body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>{{site.title}}</title>
 
+    <link rel="stylesheet" href="{{ "/node_modules/bootstrap/dist/css/bootstrap.min.css" }}">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ "/assets/main.css" }}">
+  </head>
+  <!-- begin site wrapper -->
+<div class="wrapper">
 {% include menu.html %}
-
 {{ content }}
+</div>
+<!-- end site wrapper -->
 
-{% include footer.html %}
+
+  <script src="{{'/node_modules/jquery/dist/jquery.min.js'}}"></script>
+  <script src="{{'/node_modules/bootstrap/dist/js/bootstrap.min.js'}}"></script>
+  <script src="{{'/node_modules/popper.js/dist/umd/popper.min.js'}}"></script>
+  <script src="{{'/node_modules/detect_swipe/jquery.detect_swipe.js'}}"></script>
+  <script src="{{'/assets/js/script.js'}}"></script>
+
+
+  </body>
+</html>
