--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,12 +5,11 @@
 body {
   font-family: $font-body;
 }
-.container-fluid {
-  padding-left: 0px;
-  padding-right: 0px;
-}
 .bg-light {
   background-color: white !important;
+}
+.navbar-brand {
+  white-space: normal;
 }
 .navbar-light .navbar-brand {
   color: rgb(242, 181, 145);
@@ -22,40 +21,137 @@ body {
 .navbar, ul a {
   text-transform: uppercase;
   color: black;
-  font-size: 14px;
+  font-size: 16px;
 }
-
+.dropdown-toggle::after {
+  border: 0;
+  margin: 0;
+}
+.dropdown-item {
+  text-transform: none;
+}
 #hero {
+  margin-left: -200;
   padding-top: 12rem;
   padding-bottom: 24rem;
-  margin-left: -200px;
-  background-image: url("/assets/img/hero.jpg");
+  background: url("/assets/img/hero.jpg") no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: right bottom;
+  height: 100vh;
 }
-.boxes {
-  height: 400px;
+.section {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  height: 640px;
+  overflow: hidden;
 }
+.contact {
+  padding-top: 200px;
+}
+form {
+  margin: 0 auto;
+  width: 300px;
+  padding: 1em;
+}
+label {
+  /* To make sure that all labels have the same size and are properly aligned */
+  display: inline-block;
+  width: 300px;
+  padding-top: 10px;
+}
+input, textarea {
+  /* To give the same size to all text fields */
+  width: 300px;
+  box-sizing: border-box;
+  /* To harmonize the look & feel of text field border */
+  border: 1px solid #999;
+}
+input:focus, textarea:focus {
+  /* To give a little highlight on active elements */
+  border-color: #000;
+}
+.form-group {
+  margin-bottom: 5px;
+}
+textarea {
+  vertical-align: top;
+  height: 5em;
+}
+.message {
+  padding-top: 50px;
+}
+button {
+  margin-left: .5em;
+}
+.button {
+  padding: 10px;
+}
+.full-width-container {
+  max-width: 100%;
+}
+.card-deck {
+  padding: 50px;
+}
+
 .box-1 {
-  background-image: url("https://www.fillmurray.com/640/360");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background: url("/assets/img/lgbt.jpg")top left no-repeat;
 }
 .box-2 {
-  background-image: url("https://www.fillmurray.com/640/360");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-
+  background: url("/assets/img/career.jpg")top left no-repeat;
 }
 .box-3 {
-  background-image: url("https://www.fillmurray.com/640/360");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-
+  background: url("/assets/img/anxiety.jpg") top left no-repeat;
 }
+.box-1, .box-2, .box-3 {
+  height: 0;
+  background-size: cover;
+  padding-top: 50%;
+}
+// Start Overlay Effect
+.box-1:hover .overlay-effect, .box-2:hover .overlay-effect, .box-3:hover .overlay-effect {
+  opacity: 1;
+  cursor: pointer;
+}
+.overlay-effect {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: rgba(84, 188, 232, 0.7);
+  overflow: hidden;
+}
+.overlay-text {
+  position: absolute;
+  text-align: justify;
+  font-size: 20px;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.box-1:hover .overlay-text,.box-2:hover .overlay-text,.box-3:hover .overlay-text{
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+}
+
+ iframe {
+   position: relative;
+   width: 100%;
+   height: 100%;
+ }
 
 /*------------------------------------------
   Responsive Grid Media Queries - 1280, 1024, 768, 480
@@ -68,7 +164,12 @@ body {
 
 }
 
-@media all and (min-width: 768px) and (max-width: 1024px) { }
+@media all and (min-width: 768px) and (max-width: 1024px) {
+.navbar-light .navbar-brand {
+    font-size: 30px;
+  }
+
+ }
 
 @media all and (min-width: 480px) and (max-width: 768px) {
 }
@@ -76,5 +177,10 @@ body {
 @media all and (max-width: 480px) {
   .navbar-light .navbar-brand {
     font-size: 20px;
+    text-align: center;
+  }
+  #hero {
+    height: 0;
+    margin-left: -250px;
   }
 }
