add smooth scroll, hero overlay

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,8 @@
 //fonts
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300|Lexend+Exa&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300|Lexend+Exa&display=swap|family=Alice&display=swap');
 
 
 //variables
 $font-header: 'Lexend Exa', sans-serif;
 $font-body: 'Josefin Sans', sans-serif;
+$font-overlay: 'Alice', serif;
