--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,5 +1,5 @@
   <form action="">
-      <div class="form-group">
+      <div class="form-group" id="form">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name">
     </div>
