--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,6 +1,13 @@
+
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light" role="navigation">
   <div class="d-flex flex-nowrap w-auto">
+
+{% if page.url != "/" %}
   <a class="navbar-brand" href="{% link index.html %}">Sary Rottenberg Psychotherapy</a>
+{% else %}
+  <a class="navbar-brand page-scroll" href="#page-top">Sary Rottenberg Psychotherapy</a>
+{% endif %}
+
   <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
