--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
 
 
   <script src="{{'/node_modules/jquery/dist/jquery.min.js'}}"></script>
+  <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
   <script src="{{'/node_modules/bootstrap/dist/js/bootstrap.min.js'}}"></script>
   <script src="{{'/node_modules/popper.js/dist/umd/popper.min.js'}}"></script>
   <script src="{{'/node_modules/detect_swipe/jquery.detect_swipe.js'}}"></script>
