--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,8 +2,23 @@
 ---
 @import "_variables";
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
 body {
   font-family: $font-body;
+  width: 100%;
+  height: 100%;
+}
+.full-width-container {
+  max-width: 100%;
+}
+.header {
+  padding-top: 100px;
+  text-align: center;
 }
 .bg-light {
   background-color: white !important;
@@ -17,8 +32,10 @@ body {
   text-transform: uppercase;
   font-size: 30px;
   &:hover {  color: rgb(242, 181, 145);}
+  &:visited {color: rgb(242, 181, 145);}
 }
 .navbar, ul a {
+  font-family: $font-body;
   text-transform: uppercase;
   color: black;
   font-size: 16px;
@@ -30,24 +47,43 @@ body {
 .dropdown-item {
   text-transform: none;
 }
-#hero {
+.hero {
   margin-left: -200;
-  padding-top: 12rem;
+  padding-top: 6rem;
   padding-bottom: 24rem;
   background: url("/assets/img/hero.jpg") no-repeat;
   background-size: cover;
   background-position: right bottom;
   height: 100vh;
 }
-.section {
-  padding-top: 100px;
-  padding-bottom: 100px;
+.hero-overlay {
+  top: 0;
+  left:0;
+  position: absolute;
+  width: 50%;
+  height: 100vh;
+  background: rgba(5, 5 ,5, 0.5);
+  z-index: 1;
+}
+.hero-text, a {
+  text-align: center;
+  position: relative;
+  font-family: $font-overlay;
+  color: white;
+  z-index: 100;
+  &:hover { color: white;
+            text-decoration: none;}
+}
+#treatment, #contact, #form {
+padding-top: 150px;
+padding-bottom: 50px
+}
+#contact {
   height: 640px;
-  overflow: hidden;
 }
-.contact {
-  padding-top: 200px;
-}
+
+/* ---------------------------------------Begin Contact Form
+-----------------------------------------*/
 form {
   margin: 0 auto;
   width: 300px;
@@ -86,9 +122,6 @@ button {
 .button {
   padding: 10px;
 }
-.full-width-container {
-  max-width: 100%;
-}
 .card-deck {
   padding: 50px;
 }
@@ -102,16 +135,13 @@ button {
 .box-3 {
   background: url("/assets/img/anxiety.jpg") top left no-repeat;
 }
-.box-1, .box-2, .box-3 {
+.box {
+  text-align: center;
   height: 0;
   background-size: cover;
   padding-top: 50%;
 }
 // Start Overlay Effect
-.box-1:hover .overlay-effect, .box-2:hover .overlay-effect, .box-3:hover .overlay-effect {
-  opacity: 1;
-  cursor: pointer;
-}
 .overlay-effect {
   position: absolute;
   top: 0;
@@ -125,7 +155,7 @@ button {
 }
 .overlay-text {
   position: absolute;
-  text-align: justify;
+  text-align: left;
   font-size: 20px;
   padding-left: 1em;
   padding-right: 1em;
@@ -140,8 +170,22 @@ button {
   -moz-transition: all 0.3s ease-in-out 0s;
   transition: all 0.3s ease-in-out 0s;
 }
-
-.box-1:hover .overlay-text,.box-2:hover .overlay-text,.box-3:hover .overlay-text{
+.box-button {
+  font-family: $font-overlay;
+  color: white;
+  top: 50%;
+  width: 80%;
+  position: absolute;
+  transition: 0.3s;
+}
+.box:hover .overlay-effect {
+  opacity: 1;
+  cursor: pointer;
+}
+.box:hover .box-button {
+  opacity: 0;
+}
+.box:hover .overlay-text {
   top: 50%;
   left: 50%;
   opacity: 1;
@@ -150,7 +194,7 @@ button {
  iframe {
    position: relative;
    width: 100%;
-   height: 100%;
+   height: 500px;
  }
 
 /*------------------------------------------
@@ -179,8 +223,13 @@ button {
     font-size: 20px;
     text-align: center;
   }
-  #hero {
-    height: 0;
-    margin-left: -250px;
+  .hero {
+    background-position: -525px;
+  }
+  .hero-overlay {
+    width: 100%;
+  }
+  .box-3 {
+    background-position: bottom 15% right;
   }
 }
