--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,10 @@
 
     <link rel="stylesheet" href="{{ "/node_modules/bootstrap/dist/css/bootstrap.min.css" }}">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ "/node_modules/mdbootstrap/css/mdb.min.css" }}">
     <link rel="stylesheet" href="{{ "/assets/main.css" }}">
   </head>
+
   <!-- begin site wrapper -->
 <div class="wrapper">
 {% include menu.html %}
@@ -20,10 +22,11 @@
 
 
   <script src="{{'/node_modules/jquery/dist/jquery.min.js'}}"></script>
-  <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+  <script src="https://kit.fontawesome.com/6601a55a1c.js" crossorigin="anonymous"></script>
   <script src="{{'/node_modules/bootstrap/dist/js/bootstrap.min.js'}}"></script>
   <script src="{{'/node_modules/popper.js/dist/umd/popper.min.js'}}"></script>
   <script src="{{'/node_modules/detect_swipe/jquery.detect_swipe.js'}}"></script>
+  <script src="{{'/node_modules/mdbootstrap/js/mdb.min.js'}}"></script>
   <script src="{{'/assets/js/script.js'}}"></script>
 
 
