--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,29 +1,51 @@
-  <form action="">
-      <div class="form-group" id="form">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name">
+<!-- Extended material form grid -->
+<form >
+<!-- Grid row -->
+<div class="form-row">
+  <!-- Grid column -->
+  <div class="col-md-6 col-sm-12">
+    <div class="md-form form-group">
+      <input type="text" class="form-control" id="name" placeholder="Name">
+      <label for="name">Name</label>
     </div>
-    <div class="form-group">
-      <label for="mail">E-Mail:</label>
-      <input type="email" id="mail" name="mail">
+  </div>
+  <!-- Grid column -->
+  <div class="col-md-6 col-sm-12">
+    <div class="md-form form-group">
+      <input type="email" class="form-control" id="email" placeholder="Email">
+      <label for="email">Email</label>
     </div>
-    <div>
-      <div class="form-group">
-        <label class="select" for="select">Who would you like to contact:</label>
-      </div>
-      <select id="select">
-          <option value="">--Please select--</option>
-          <option value="sary">Sary Rottenberg</option>
-          <option value="t-1">Therapist 1</option>
-          <option value="t-2">Therapist 2</option>
-          <option value="t-3">Therapist 3</option>
-          <option value="t-4">Therapist 4</option>
+  </div>
+</div>
+
+<!-- Grid row -->
+<div class="row">
+  <!-- Grid column -->
+  <div class="col-md-12 col-sm-12">
+    <div class="md-form form-group">
+      <select class="browser-default custom-select">
+        <option selected>Who would you like to contact</option>
+        <option value="1">Sary Rottenberg</option>
+        <option value="2">Kate</option>
+        <option value="3">Alana</option>
       </select>
     </div>
-    <div class="form-group message">
-      <textarea id="message" name="message" placeholder="You may leave a brief message here. (optional)"></textarea>
-    </div>
-    <div class="button">
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </div>
-  </form>
+  </div>
+</div>
+
+<!-- Grid row -->
+<div class="row">
+  <!-- Grid column -->
+  <div class="col-md-12 col-sm-12">
+  <div class="form-group">
+  <label for="message">Message (optional)</label>
+  <textarea class="form-control rounded-0" id="message" rows="5"></textarea>
+</div>
+  </div>
+</div>
+
+
+
+<button type="submit" class="btn btn-primary btn-dark">Submit</button>
+</form>
+<!-- Extended material form grid -->
