--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,5 +1,6 @@
 ---
 ---
+@import "material-components-web/material-components-web";
 @import "_variables";
 
 * {
@@ -48,6 +49,7 @@ body {
   text-transform: none;
 }
 .hero {
+  position: relative;
   margin-left: -200;
   padding-top: 6rem;
   padding-bottom: 24rem;
@@ -64,6 +66,13 @@ body {
   height: 100vh;
   background: rgba(5, 5 ,5, 0.5);
   z-index: 1;
+}
+.fa-chevron-down {
+  bottom: 5%;
+  left: 50%;
+  position: absolute;
+  color: white;
+  z-index: 100;
 }
 .hero-text, a {
   text-align: center;
@@ -82,50 +91,30 @@ padding-bottom: 50px
   height: 640px;
 }
 
+// Begin About Page Styles
+.mdc-card {
+  margin: 5px;
+  min-width: 350px;
+  min-height: 350px;
+}
+.kate {
+  background-image: url("/assets/img/kate.jpeg");
+}
+.alana {
+  background-image: url("/assets/img/alana.jpeg");
+}
+.team {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 /* ---------------------------------------Begin Contact Form
 -----------------------------------------*/
 form {
   margin: 0 auto;
-  width: 300px;
-  padding: 1em;
+  width: 500px;
+  padding-top: 200px;
 }
-label {
-  /* To make sure that all labels have the same size and are properly aligned */
-  display: inline-block;
-  width: 300px;
-  padding-top: 10px;
-}
-input, textarea {
-  /* To give the same size to all text fields */
-  width: 300px;
-  box-sizing: border-box;
-  /* To harmonize the look & feel of text field border */
-  border: 1px solid #999;
-}
-input:focus, textarea:focus {
-  /* To give a little highlight on active elements */
-  border-color: #000;
-}
-.form-group {
-  margin-bottom: 5px;
-}
-textarea {
-  vertical-align: top;
-  height: 5em;
-}
-.message {
-  padding-top: 50px;
-}
-button {
-  margin-left: .5em;
-}
-.button {
-  padding: 10px;
-}
-.card-deck {
-  padding: 50px;
-}
-
 .box-1 {
   background: url("/assets/img/lgbt.jpg")top left no-repeat;
 }
@@ -219,6 +208,9 @@ button {
 }
 
 @media all and (max-width: 480px) {
+  form {
+    width: auto;
+  }
   .navbar-light .navbar-brand {
     font-size: 20px;
     text-align: center;
