--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,7 +1,8 @@
 ---
 ---
-@import "material-components-web/material-components-web";
 @import "_variables";
+@import "_material-components-web";
+@import "/node_modules/material-design-icons/iconfont/material-icons.css";
 
 * {
   margin: 0;
