change sass material imports

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,8 +1,9 @@
 ---
 ---
 @import "_variables";
-@import "_material-components-web";
-@import "/node_modules/material-design-icons/iconfont/material-icons.css";
+@import "@material/card/mdc-card";
+@import "@material/typography/mdc-typography";
+@import "@material/button/mdc-button";
 
 * {
   margin: 0;
@@ -97,6 +98,9 @@ padding-bottom: 50px
   margin: 5px;
   min-width: 350px;
   min-height: 350px;
+}
+.card-title {
+  padding: 1.25rem 0 1px 1.25rem;
 }
 .kate {
   background-image: url("/assets/img/kate.jpeg");
