--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <title>{{site.title}}</title>
 
     <link rel="stylesheet" href="{{ "/node_modules/bootstrap/dist/css/bootstrap.min.css" }}">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ "/node_modules/material-design-icons/iconfont/material-icons.css" }}">
     <link rel="stylesheet" href="{{ "/node_modules/mdbootstrap/css/mdb.min.css" }}">
     <link rel="stylesheet" href="{{ "/assets/main.css" }}">
   </head>
