--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,14 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{site.title}}</title>
-
-    <link rel="stylesheet" href="{{ "/node_modules/bootstrap/dist/css/bootstrap.min.css" }}">
-    <link rel="stylesheet" href="{{ "/node_modules/material-design-icons/iconfont/material-icons.css" }}">
-    <link rel="stylesheet" href="{{ "/node_modules/mdbootstrap/css/mdb.min.css" }}">
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ "/assets/main.css" }}">
   </head>
 
@@ -21,12 +25,16 @@
 <!-- end site wrapper -->
 
 
-  <script src="{{'/node_modules/jquery/dist/jquery.min.js'}}"></script>
-  <script src="https://kit.fontawesome.com/6601a55a1c.js" crossorigin="anonymous"></script>
-  <script src="{{'/node_modules/bootstrap/dist/js/bootstrap.min.js'}}"></script>
-  <script src="{{'/node_modules/popper.js/dist/umd/popper.min.js'}}"></script>
-  <script src="{{'/node_modules/detect_swipe/jquery.detect_swipe.js'}}"></script>
-  <script src="{{'/node_modules/mdbootstrap/js/mdb.min.js'}}"></script>
+
+    <!-- JQuery -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
   <script src="{{'/assets/js/script.js'}}"></script>
 
 
