add copy to individual pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
         <div class="col-lg-6 col-md-6 col-sm-12 map">
         <iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=New%20York%2C%20NY%2C%20USA&key=AIzaSyC_qKIJdHDv_xY19WxvOJ4cORwC74kbRKM" allowfullscreen></iframe>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 info">
         <p>Libertarian I'm an enormous man-child I'm kind of a genius I live in constant amazement of nature and the universe. Giving massages pics on request looking for a third are you really going to rule me out becausae of it? when I get drunk, at least once a day there's no such thing as a typical Friday night I'm too lazy to keep typing I may be somewhat jaded I am a hoarder, but only of top shelf stuff. On the first date Ayn Rand is probably a conspiracy I tend to be attracted to other shenanigans I do well dating.</p>
       </div>
       </div>
