--- a/assets/main.scss
+++ b/assets/main.scss
@@ -66,7 +66,7 @@ body {
   background: rgba(5, 5 ,5, 0.5);
   z-index: 1;
 }
-.fa-chevron-down {
+.fa-arrow-alt-circle-down {
   bottom: 5%;
   left: 50%;
   position: absolute;
