change formatting individual about pages

--- a/_includes/treatments.html
+++ b/_includes/treatments.html
@@ -3,7 +3,7 @@
     <div class="row">
 
       <div class="col-12">
-        <h3 class="page-header">
+        <h3 class="page-header text-uppercase">
           Treatments
         </h3>
       </div>
