--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ "/assets/main.css, " | prepend: site.baseurl }">
-  </head>
+        <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 
   <!-- begin site wrapper -->
 <div class="wrapper">
