--- a/_includes/treatments.html
+++ b/_includes/treatments.html
@@ -1,4 +1,4 @@
-<div class="container full-width-container vh-100" id="treatment" >
+<div class="container full-width-container" id="treatment" >
 
     <div class="row">
 
@@ -51,7 +51,7 @@
   </div>
   <div class="row">
     <div class="col-12 d-flex justify-content-center">
-      <a href="#contact" class="page-scroll fas fa-angle-double-down fa-2x treat-arrow"></a>
+      <a href="#location" class="page-scroll fas fa-angle-double-down fa-2x arrow-down"></a>
     </div>
   </div>
   </div>
