--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-
-<div class="container full-width-container" id="contact">
+<footer>
+  <div class="container full-width-container" id="location">
   <div class="row">
     <div class="col-12">
       <h3 class="page-header text-uppercase">
@@ -7,7 +7,7 @@
       </h3>
     </div>
   </div>
-    <div class="row" >
+    <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 map">
         <iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=New%20York%2C%20NY%2C%20USA&key=AIzaSyC_qKIJdHDv_xY19WxvOJ4cORwC74kbRKM" allowfullscreen></iframe>
       </div>
@@ -16,3 +16,4 @@
       </div>
       </div>
   </div>
+</footer>
