--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,7 +14,7 @@ body {
   height: 100%;
 }
 .full-width-container {
-  max-width: 90%;
+  max-width: 95%;
 }
 .header {
   padding-top: 100px;
@@ -23,6 +23,22 @@ body {
 .bg-light {
   background-color: white !important;
 }
+
+.info {
+  text-align: justify;
+}
+.page-header {
+  font-family: $font-header;
+  // text-transform: uppercase;
+  padding: 25px;
+  text-align: center;
+}
+.arrow-down {
+  color: rgb(242, 181, 145);
+  padding-top: 25px;
+}
+
+/*  ------------------------------ Begin Navigation Bar-------------------------------*/
 .navbar-brand {
   white-space: normal;
 }
@@ -47,6 +63,8 @@ body {
 .dropdown-item {
   text-transform: none;
 }
+
+/* ---------------------------Hero Image and Overlay---------------------------*/
 .hero {
   position: relative;
   margin-left: -200;
@@ -73,10 +91,6 @@ body {
   color: white;
   z-index: 100;
 }
-.treat-arrow {
-  color: rgb(242, 181, 145);
-  padding-top: 10px;
-}
 .hero-text, a {
   text-align: center;
   position: relative;
@@ -86,88 +100,11 @@ body {
   &:hover { color: white;
             text-decoration: none;}
 }
-#treatment, #contact, #form {
-padding-top: 100px;
-padding-bottom: 40px;
-}
-#contact {
-  height: 640px;
-}
-.section {
-  margin: 0 auto;
-}
-.info {
-  text-align: justify;
-}
-.page-header {
-  font-family: $font-header;
-  // text-transform: uppercase;
-  padding: 25px;
-  text-align: center;
-}
-// Begin About Page Styles
-.mdc-card {
-  margin: 5px;
-  min-width: 350px;
-  min-height: 350px;
-}
-.media-link {
-  position:absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-}
-.my-card-title {
-  margin: 1.25rem 0 1px 1.25rem;
-  color: white;
-  font-family: $font-body;
-  width:130px;
-  text-align: center;
-  background-color: black;
-  border-radius: 10px 100px / 120px;
-}
-.mdc-button::before, .mdc-button::after {
-  background-color: black;
-}
-.mdc-button:not(:disabled) {
-  color: black;
-}
-.hpot {
-  display: none;
-}
-.mdc-button {
-  font-family: $font-body;
-  border-radius: 10px 100px / 120px;
-}
-.caption-btn {
-  padding-top: 10px;
-  padding-left: 0;
 
-}
-.kate {
-  background-image: url("/assets/img/kate.jpeg");
-}
-.alana {
-  background-image: url("/assets/img/alana.jpeg");
-}
-.gwenn {
-  background-image: url("/assets/img/gwenn.jpg");
-}
-.sary {
-  background-image: url("/assets/img/sary.jpg")
-}
-.team {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-/* ---------------------------------------Begin Contact Form
------------------------------------------*/
-form {
-  margin: 0 auto;
-  width: 500px;
-  padding-top: 200px;
+/*------------------------------Begin section styles-----------------------*/
+#location, #treatment, #form  {
+  padding-top: 175px;
+  padding-bottom: 100px;
 }
 .box-1 {
   background: url("/assets/img/lgbt.jpg")top left no-repeat;
@@ -184,7 +121,8 @@ form {
   background-size: cover;
   padding-top: 50%;
 }
-// Start Overlay Effect
+
+/*----------------------Begin Overlay Effect Treatment Section-------------*/
 .overlay-effect {
   position: absolute;
   top: 0;
@@ -234,10 +172,73 @@ form {
   opacity: 1;
 }
 
+/* -------------------------Begin About Page Styles-------------------------------------------*/
+.kate {
+  background-image: url("/assets/img/kate.jpeg");
+}
+.alana {
+  background-image: url("/assets/img/alana.jpeg");
+}
+.gwenn {
+  background-image: url("/assets/img/gwenn.jpg");
+}
+.sary {
+  background-image: url("/assets/img/sary.jpg")
+}
+.team {
+  padding-left: 0;
+  padding-right: 0;
+}
+.mdc-card {
+  margin: 5px;
+  min-width: 350px;
+  min-height: 350px;
+}
+.media-link {
+  position:absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+.my-card-title {
+  margin: 1.25rem 0 1px 1.25rem;
+  color: white;
+  font-family: $font-body;
+  width:130px;
+  text-align: center;
+  background-color: black;
+  border-radius: 10px 100px / 120px;
+}
+.mdc-button::before, .mdc-button::after {
+  background-color: black;
+}
+.mdc-button:not(:disabled) {
+  color: black;
+}
+.mdc-button {
+  font-family: $font-body;
+  border-radius: 10px 100px / 120px;
+}
+.caption-btn {
+  padding-top: 10px;
+  padding-left: 0;
+}
+
+
+/* ------------------Begin Contact Form-----------------------------------------*/
+form {
+  margin: 0 auto;
+  width: 500px;
+  padding-top: 200px;
+}
+.hpot {
+  display: none;
+}
  iframe {
    position: relative;
    width: 100%;
-   height: 500px;
+   height: 400px;
  }
 
 /*------------------------------------------
