--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -17,7 +17,9 @@
       <li class="nav-item">
         <a class="nav-link" href="{% link _pages/services.html %}">Services</a>
       </li>
-    
+      <li class="nav-item">
+        <a class="nav-link" href="{% link _pages/specialties.html %}">Specialities</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="{% link _pages/about.html %}">Who We Are</a>
       </li>
