--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,7 +14,7 @@ body {
   height: 100%;
 }
 .full-width-container {
-  max-width: 95%;
+  max-width: 100%;
 }
 .header {
   padding-top: 100px;
@@ -23,7 +23,6 @@ body {
 .bg-light {
   background-color: white !important;
 }
-
 .info {
   text-align: justify;
 }
@@ -85,24 +84,26 @@ body {
   z-index: 1;
 }
 .hero-arrow {
-  bottom: 5%;
+  bottom: 10%;
   left: 50%;
   position: absolute;
   color: white;
   z-index: 100;
 }
 .hero-text, a {
+  padding-top: 50%;
   text-align: center;
   position: relative;
   font-family: $font-overlay;
   color: white;
   z-index: 100;
+  font-size: 3rem;
   &:hover { color: white;
             text-decoration: none;}
 }
 
 /*------------------------------Begin section styles-----------------------*/
-#location, #treatment, #form  {
+#treatment, #form  {
   padding-top: 175px;
   padding-bottom: 100px;
 }
@@ -121,7 +122,20 @@ body {
   background-size: cover;
   padding-top: 50%;
 }
+.map {
+  padding-top: 150px;
+}
+#footer {
+  padding: 25px;
+  // background-color: rgb(242, 181, 145);
+}
+#front-statement, #front-statement-meet {
+  padding: 100px;
+  font-size: 30px;
+  text-align: center;
+  background-color: rgba(204, 212, 217, 85);
 
+}
 /*----------------------Begin Overlay Effect Treatment Section-------------*/
 .overlay-effect {
   position: absolute;
@@ -178,9 +192,6 @@ body {
 }
 .alana {
   background-image: url("/assets/img/alana.jpeg");
-}
-.gwenn {
-  background-image: url("/assets/img/gwenn.jpg");
 }
 .sary {
   background-image: url("/assets/img/sary.jpg")
@@ -254,8 +265,14 @@ form {
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
 .navbar-light .navbar-brand {
-    font-size: 30px;
+    font-size: 20px;
+    padding-left: 10px;
   }
+.navbar, ul a {
+  font-size: 14px;
+  padding-left: 5px;
+  padding-right: 10px;
+}
 
  }
 
