fix styling services, specialties.html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,11 @@
   <div class="container full-width-container">
     <div class="row">
     <div class="col-12" id="footer">
-      <p>contact</p>
+      <p>&copy;
+        <script type="text/JavaScript">
+        document.write(new Date().getFullYear());
+        </script> 
+Sary Rottenberg Psycotherapy</p>
     </div>
       </div>
   </div>
