--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,8 +1,9 @@
 //fonts
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300|Lexend+Exa&display=swap|family=Alice&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato|Josefin+Sans:300|Lexend+Exa&display=swap|family=Alice&display=swap|Raleway:400,500&display=swap');
 
 
 //variables
 $font-header: 'Lexend Exa', sans-serif;
+$font-body2: 'Raleway', sans-serif;
 $font-body: 'Josefin Sans', sans-serif;
 $font-overlay: 'Alice', serif;
