fix styling footer, fix specialties menu

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,20 @@
   <div class="container full-width-container">
     <div class="row">
     <div class="col-12" id="footer">
-      <p>&copy;
+      &copy;
         <script type="text/JavaScript">
         document.write(new Date().getFullYear());
-        </script> 
-Sary Rottenberg Psycotherapy</p>
+        </script>
+        Sary Rottenberg Psycotherapy | 245 W 29th St, New York, NY 10001 | (203)-518-4177 |
+        <a href="{% link _pages/contact.html %}">
+          <i class="fas fa-envelope"></i>
+        </a>
+        <a href="https://www.facebook.com/pages/category/Mental-Health-Service/Sary-Rottenberg-MA-LMHC-Psychotherapist-375883209229486/
+        ">
+        <i class="fab fa-facebook-square"></i>
+        </a>
+      
     </div>
-      </div>
+    </div>
   </div>
 </footer>
