--- a/_includes/form.html
+++ b/_includes/form.html
@@ -50,6 +50,6 @@
 
 
 
-<button type="submit" class="btn btn-primary btn-dark">Submit</button>
+<button type="submit" class="btn btn-primary btn-light">Submit</button>
 </form>
 <!-- Extended material form grid -->
