--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,9 +1,9 @@
 //fonts
-@import url('https://fonts.googleapis.com/css?family=Lato|Josefin+Sans:300|Lexend+Exa&display=swap|family=Alice&display=swap|Raleway:400,500&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Alice|Josefin+Sans:400,400i,600|Lexend+Exa|Nunito:400,600,700,800&display=swap" rel="stylesheet");
 
 
 //variables
 $font-header: 'Lexend Exa', sans-serif;
-$font-body2: 'Raleway', sans-serif;
+$font-body2: 'Nunito', sans-serif;
 $font-body: 'Josefin Sans', sans-serif;
 $font-overlay: 'Alice', serif;
