--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,14 +6,20 @@
   margin: 0;
   padding: 0;
 }
-
 html,
 body {
-  font-family: $font-body2;
-  font-weight: bold;
+  font-family: $font-body;
   width: 100%;
   height: 100%;
   background-color: rgba(204, 212, 217, 85);
+}
+i {
+  padding-top: 10px;
+  font-size: 20px;
+  color: white;
+}
+i:hover {
+  color: rgba(204, 212, 217, 85)
 }
 .container {
   padding-bottom: 2.5rem;
@@ -42,7 +48,7 @@ body {
 }
 .page-header-2 {
   padding: 10px 10px 10px 0;
-  font-family: $font-body2;
+  font-family: $font-body;
   font-weight: bold;
 }
 
@@ -58,7 +64,7 @@ body {
   font-size: 30px;
   &:hover {color: rgb(204, 212, 217);}
 }
-.navbar, ul a {
+.navbar {
   font-family: $font-body;
   text-transform: uppercase;
   color: black;
@@ -102,7 +108,7 @@ body {
   z-index: 100;
 }
 .hero-text{
-  text-align: center;
+  text-align: left;
   line-height: 3.5rem;
   padding-top: 25%;
   position: relative;
@@ -135,7 +141,7 @@ body {
   padding-top: 150px;
 }
 #footer {
-  height: 3.5rem;
+  text-align: center;
   bottom: 0;
   position: absolute;
   padding: 10px;
@@ -156,6 +162,163 @@ body {
 .service-img {
   border-radius: 50%;
 }
+.menu-container {
+  position: relative;
+}
+#mdc-button-specialty:not(:disabled) {
+  font-size: 15px;
+  margin-bottom: 20px;
+}
+.mdc-menu-surface--open {
+  left: -75px !important;
+}
+a, .mdc-list-tem {
+  color: black;
+  &:hover {
+    color: rgb(115, 38, 38);
+  }
+}
+.back {
+  font-weight: 500;
+}
+/* -------------------------Begin About Page Styles-------------------------------------------*/
+.kate {
+  background-image: url("/assets/img/kate.jpeg");
+}
+.alana {
+  background-image: url("/assets/img/alana.jpeg");
+}
+.sary {
+  background-image: url("/assets/img/sary.jpg")
+}
+.team {
+  padding-left: 0;
+  padding-right: 0;
+}
+.mdc-card {
+  margin: 10px;
+  min-width: 300px;
+}
+.mdc-typography--body3-specialties {
+  color: rgb(115, 38, 38);
+  font-size: 15px;
+
+}
+.media-link {
+  position:absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+.my-card-title {
+  padding-top: 5px;
+  margin: 1.25rem 0 1px 1.25rem;
+  color: white;
+  font-size: 25px;
+  width:130px;
+  text-align: center;
+  background-color: rgba(115, 38, 38, 0.8);
+  border-radius: 10px;
+}
+#learn-more:not(:disabled){
+  font-family: $font-header;
+  font-size: 15px;
+  color: rgb(115, 38, 38);
+}
+.mdc-button::before, .mdc-button::after {
+  background-color: rgb(115, 38, 38);
+}
+.mdc-button:not(:disabled), .mdc-button--outlined:not(:disabled) {
+  border-color: transparent;
+  background-color: white;
+  font-size: 20px;
+  color: black;
+  text-transform: capitalize;
+}
+.caption-btn {
+  padding-top: 10px;
+  padding-left: 0;
+}
+
+/* ------------------Begin Contact Form-----------------------------------------*/
+form {
+  margin: 0 auto;
+  width: 500px;
+  font-weight: 600;
+}
+.form {
+  padding-top: 150px;
+}
+.hpot {
+  display: none;
+}
+ iframe {
+   position: relative;
+   width: 100%;
+   height: 400px;
+ }
+.custom-select, .form-control {
+  background-color: transparent;
+  border: solid 1px;
+}
+.md-form label {
+  color: black;
+}
+
+/*------------------------------------------
+  Responsive Grid Media Queries - 1280, 1024, 768, 480
+   1280-1024   - desktop (default grid)
+   1024-768    - tablet landscape
+   768-480     - tablet
+   480-less    - phone landscape & smaller
+--------------------------------------------*/
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+
+}
+
+@media all and (min-width: 768px) and (max-width: 1024px) {
+.navbar-light .navbar-brand {
+    font-size: 20px;
+    padding-left: 10px;
+  }
+.navbar, ul a {
+  font-size: 14px;
+  padding-left: 5px;
+  padding-right: 10px;
+}
+
+ }
+
+@media all and (min-width: 480px) and (max-width: 768px) {
+}
+
+@media all and (max-width: 480px) {
+  form {
+    width: auto;
+  }
+  .navbar-light .navbar-brand {
+    font-size: 20px;
+    text-align: center;
+  }
+  .hero {
+    background-position: -525px;
+  }
+  .hero-overlay {
+    width: 100%;
+  }
+  #front-statement, #front-statement-meet {
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 20px;
+  }
+  .page-header-2 {
+    text-align: center;
+  }
+}
+
+
+
 /*----------------------Begin Overlay Effect Treatment Section-------------*/
 // .overlay-effect {
 //   position: absolute;
@@ -205,126 +368,3 @@ body {
 //   left: 50%;
 //   opacity: 1;
 // }
-
-/* -------------------------Begin About Page Styles-------------------------------------------*/
-.kate {
-  background-image: url("/assets/img/kate.jpeg");
-}
-.alana {
-  background-image: url("/assets/img/alana.jpeg");
-}
-.sary {
-  background-image: url("/assets/img/sary.jpg")
-}
-.team {
-  padding-left: 0;
-  padding-right: 0;
-}
-.mdc-card {
-  margin: 10px;
-  min-width: 300px;
-}
-.mdc-typography--body3 {
-  color: rgb(115, 38, 38);
-}
-.media-link {
-  position:absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-}
-.my-card-title {
-  margin: 1.25rem 0 1px 1.25rem;
-  color: white;
-  font-family: $font-body;
-  width:130px;
-  text-align: center;
-  background-color: black;
-  border-radius: 10px 100px / 120px;
-}
-#learn-more:not(:disabled)  {
-  font-family: $font-header;
-  font-size: 15px;
-}
-.mdc-button:hover {
-  background-color: rgb(204, 212, 217);
-}
-.mdc-button::before, .mdc-button::after {
-  background-color: rgb(115, 38, 38);
-}
-.mdc-button:not(:disabled), .mdc-button--outlined:not(:disabled) {
-  border-color: rgb(115, 38, 38);
-  font-family: $font-body2;
-  font-weight: bold;
-  font-size: 25px;
-  color: black;
-}
-.caption-btn {
-  padding-top: 10px;
-  padding-left: 0;
-}
-
-
-/* ------------------Begin Contact Form-----------------------------------------*/
-form {
-  margin: 0 auto;
-  width: 500px;
-  padding-top: 200px;
-}
-.hpot {
-  display: none;
-}
- iframe {
-   position: relative;
-   width: 100%;
-   height: 400px;
- }
-
-/*------------------------------------------
-  Responsive Grid Media Queries - 1280, 1024, 768, 480
-   1280-1024   - desktop (default grid)
-   1024-768    - tablet landscape
-   768-480     - tablet
-   480-less    - phone landscape & smaller
---------------------------------------------*/
-@media all and (min-width: 1024px) and (max-width: 1280px) {
-
-}
-
-@media all and (min-width: 768px) and (max-width: 1024px) {
-.navbar-light .navbar-brand {
-    font-size: 20px;
-    padding-left: 10px;
-  }
-.navbar, ul a {
-  font-size: 14px;
-  padding-left: 5px;
-  padding-right: 10px;
-}
-
- }
-
-@media all and (min-width: 480px) and (max-width: 768px) {
-}
-
-@media all and (max-width: 480px) {
-  form {
-    width: auto;
-  }
-  .navbar-light .navbar-brand {
-    font-size: 20px;
-    text-align: center;
-  }
-  .hero {
-    background-position: -525px;
-  }
-  .hero-overlay {
-    width: 100%;
-  }
-  #front-statement, #front-statement-meet {
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 20px;
-  }
-}
