--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,9 +1,8 @@
 //fonts
-@import url("https://fonts.googleapis.com/css?family=Alice|Josefin+Sans:400,400i,600|Lexend+Exa|Nunito:400,600,700,800&display=swap" rel="stylesheet");
+@import url('https://fonts.googleapis.com/css?family=Alice|Josefin+Sans:400,400i,600,600i,700,700i|Lexend+Exa&display=swap');
 
 
 //variables
 $font-header: 'Lexend Exa', sans-serif;
-$font-body2: 'Nunito', sans-serif;
 $font-body: 'Josefin Sans', sans-serif;
 $font-overlay: 'Alice', serif;
