--- a/assets/main.scss
+++ b/assets/main.scss
@@ -39,7 +39,9 @@ i:hover {
   background-color: white !important;
 }
 .info {
-  text-align: justify;
+  font-weight: 400;
+  font-size: 18px;
+  text-align: left;
 }
 .page-header {
   font-family: $font-header;
@@ -101,15 +103,14 @@ i:hover {
   z-index: 1;
 }
 .hero-arrow {
-  bottom: 10%;
+  bottom: 20%;
   left: 50%;
   position: absolute;
   color: white;
   z-index: 100;
 }
 .hero-text{
-  text-align: left;
-  line-height: 3.5rem;
+  padding-left: 25px;
   padding-top: 25%;
   position: relative;
   font-family: $font-overlay;
@@ -274,7 +275,13 @@ form {
    480-less    - phone landscape & smaller
 --------------------------------------------*/
 @media all and (min-width: 1024px) and (max-width: 1280px) {
-
+  .hero-text {
+    font-size: 4rem;
+  }
+svg {
+  width: 250px;
+  height: 150px;
+}
 }
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
@@ -303,6 +310,10 @@ form {
   }
   .hero {
     background-position: -525px;
+  }
+  .hero-text {
+    text-align: left;
+    padding-top: 15px;
   }
   .hero-overlay {
     width: 100%;
