--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,5 +1,5 @@
 <!-- Extended material form grid -->
-<form method="POST" action="https://formspree.io/llaurenb@gmail.com">
+<form method="POST" action="">
   <!-- honeypot -->
 <div class="hpot">
 <label>Leave this field empty: <input name="_gotcha"></label>
@@ -27,8 +27,8 @@
   <!-- Grid column -->
   <div class="col-md-12 col-sm-12">
     <div class="md-form form-group">
-      <select class="browser-default custom-select">
-        <option selected>Who would you like to contact</option>
+      <select id="menu" class="browser-default custom-select">
+        <option>Who would you like to contact</option>
         <option value="1">Sary Rottenberg</option>
         <option value="2">Kate Blemler</option>
         <option value="3">Alana Devine-Dunn</option>
@@ -42,7 +42,7 @@
   <!-- Grid column -->
   <div class="col-md-12 col-sm-12">
   <div class="form-group">
-  <label for="message">Message (optional)</label>
+  <label for="message">Message</label>
   <textarea name="message" class="form-control rounded-0" id="message" rows="5"></textarea>
 </div>
   </div>
