--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -24,7 +24,10 @@
         <a class="nav-link" href="{% link _pages/about.html %}">Who We Are</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% link _pages/contact.html %}">Contact</a>
+        <a class="nav-link" href="">Blog</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="contact" href="{% link _pages/contact.html %}">Contact</a>
       </li>
     </ul>
   </div>
