--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,8 +1,9 @@
 //fonts
-@import url('https://fonts.googleapis.com/css?family=Alice|Josefin+Sans:400,400i,600,600i,700,700i|Lexend+Exa&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Alice|Josefin+Sans:300,400,400i,600,600i,700,700i|Lexend+Exa|Roboto:400,500,700&display=swap');
 
 
 //variables
+$font-material: 'Roboto', sans-serif;
 $font-header: 'Lexend Exa', sans-serif;
 $font-body: 'Josefin Sans', sans-serif;
 $font-overlay: 'Alice', serif;
